--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+  font-size: 14px;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -39,4 +40,13 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+
+button {
+  background-color: inherit;
+  color: inherit;
+  text-decoration: inherit;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
