--- a/client/src/Components/InformationPannel/InformationPannel.css
+++ b/client/src/Components/InformationPannel/InformationPannel.css
@@ -1,5 +1,7 @@
 .notification-pane-wrapper {
   min-width: 280px;
+  height: 100vh;
+  overflow-y: auto;
   padding: var(--gap-2xl);
   border-left: 1px solid var(--black-10, rgba(28, 28, 28, 0.1));
   display: flex;
@@ -11,4 +13,35 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 20px;
+}
+
+.info-group-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-md);
+}
+
+.info-group-header {
+  height: 36px;
+  padding: var(--gap-md) var(--gap-xs);
+}
+
+.info-group-header > h2 {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.info-group-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.info-group-list li {
+  margin-bottom: 8px;
+}
+
+.info-group-list li:last-child {
+  margin-bottom: 0;
 }
