--- a/client/src/Components/DashboardInfobar/DashboardInfobar.css
+++ b/client/src/Components/DashboardInfobar/DashboardInfobar.css
@@ -1,9 +1,28 @@
 .dashboard-infobar-wrapper {
   width: 100%;
-  left: 212px;
+  height: 68px;
   padding: 20px 28px;
   gap: 0px;
-  border: 0px 0px 1px 0px;
   justify-content: space-between;
-  opacity: 0px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgba(28, 28, 28, 0.1);
+}
+
+.dashboard-infobar-wrapper > div {
+  display: flex;
+  align-items: center;
+  height: 28px;
+  gap: var(--gap-md);
+}
+
+.dashboard-infobar-button {
+  width: 28px;
+  height: 28px;
+  border-radius: var(--gap-xs);
+}
+
+.dashboard-infobar-button:hover,
+:focus-visible {
+  background-color: rgba(1, 1, 1, 0.1);
 }
