--- a/client/src/Pages/Dashboard/Dashboard.css
+++ b/client/src/Pages/Dashboard/Dashboard.css
@@ -12,5 +12,7 @@
 
 .dashboard-content-wrapper > section {
   width: 100%;
-  padding: 20px 28px;
+  height: calc(100vh - 68px);
+  padding: 28px;
+  overflow-y: auto;
 }
