--- a/client/src/Components/Notifications/Notifications.css
+++ b/client/src/Components/Notifications/Notifications.css
@@ -41,3 +41,7 @@
   text-align: left;
   color: rgba(28, 28, 28, 0.4);
 }
+
+.dark .notification-timestamp {
+  color: var(--black-40, rgba(255, 255, 255, 0.4));
+}
