--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,8 +5,6 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: black;
-  background: var(--white-100, rgba(255, 255, 255, 1));
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -53,12 +51,9 @@ body.dark {
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  color: inherit;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  cursor: pointer;
 }
 
 button {
