--- a/client/src/Pages/DefaultPage/DefaultPage.css
+++ b/client/src/Pages/DefaultPage/DefaultPage.css
@@ -1,8 +1,14 @@
+.default-page-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: var(--gap-xl);
+}
+
 .dashboard-page-header-wrapper {
   height: 28px;
   display: flex;
   align-items: center;
-  margin-bottom: var(--gap-xl);
 }
 
 .dashboard-page-header-wrapper > h2 {
@@ -29,4 +35,51 @@
 .default-page-quick-metrics {
   display: flex;
   gap: 28px;
+}
+
+.projection-vs-actuals-wrapper {
+  height: 252px;
+  min-width: 400px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-xl);
+  border-radius: var(--gap-xl);
+  opacity: 0px;
+  background: var(--Primary-Light, rgba(247, 249, 251, 1));
+}
+
+.projection-vs-actuals-header {
+  height: 20px;
+}
+
+.projection-vs-actuals-header > h2 {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: left;
+  color: var(--black-100, rgba(28, 28, 28, 1));
+}
+
+/* 
+----------------------------------------------------------------
+-----------------------REVENUE----------------------------------
+----------------------------------------------------------------  
+*/
+
+.revenue-details-grid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 28px;
+}
+
+.revenue-chart-wrapper {
+  height: 320px;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  background: var(--Primary-Light, rgba(247, 249, 251, 1));
+  padding: 24px;
+  border-radius: var(--gap-xl);
 }
