--- a/client/src/Pages/OrderPage/OrderPage.css
+++ b/client/src/Pages/OrderPage/OrderPage.css
@@ -111,20 +111,28 @@ td {
   width: 160px;
   height: 100%;
   border-radius: var(--gap-md);
+  display: flex;
+  align-items: center;
+  padding: 4px 8px;
+  background: var(--white-40, rgba(255, 255, 255, 0.4));
+  border: 1px solid var(--black-10, rgba(28, 28, 28, 0.1));
 }
 
 .order-search-form > input {
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.4);
   padding: var(--gap-xs) var(--gap-md);
   border-radius: var(--gap-md);
   outline: none;
   border: none;
   color: inherit;
-  outline: 1px solid rgba(28, 28, 28, 0.1);
+  background-color: transparent;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: left;
 }
 
-.dark .order-search-form > input {
+.dark .order-search-form {
   background: var(--white-40, rgba(28, 28, 28, 0.4));
 }
