--- a/client/src/Components/DashboardNavbar/Sidebar.css
+++ b/client/src/Components/DashboardNavbar/Sidebar.css
@@ -8,6 +8,9 @@
   flex-direction: column;
   gap: 20px;
   border-right: 1px solid var(--black-10, rgba(28, 28, 28, 0.1));
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: grey transparent;
 }
 
 .dark .sidebar-wrapper {
