--- a/client/src/Pages/OrderPage/OrderPage.css
+++ b/client/src/Pages/OrderPage/OrderPage.css
@@ -1,3 +1,9 @@
+.order-page-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-xl);
+}
+
 .order-table-root {
   width: 100%;
   border-collapse: collapse;
@@ -113,12 +119,11 @@ td {
   border-radius: var(--gap-md);
   display: flex;
   align-items: center;
-  padding: 4px 8px;
-  background: var(--white-40, rgba(255, 255, 255, 0.4));
-  border: 1px solid var(--black-10, rgba(28, 28, 28, 0.1));
+  gap: 4px;
 }
 
 .order-search-form > input {
+  background-color: rgba(255, 255, 255, 0.4);
   width: 100%;
   height: 100%;
   padding: var(--gap-xs) var(--gap-md);
@@ -126,13 +131,9 @@ td {
   outline: none;
   border: none;
   color: inherit;
-  background-color: transparent;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px;
-  text-align: left;
+  outline: 1px solid rgba(28, 28, 28, 0.1);
 }
 
-.dark .order-search-form {
+.dark .order-search-form > input {
   background: var(--white-40, rgba(28, 28, 28, 0.4));
 }
