--- a/client/src/Pages/DefaultPage/DefaultPage.css
+++ b/client/src/Pages/DefaultPage/DefaultPage.css
@@ -37,15 +37,13 @@
   gap: 28px;
 }
 
-.projection-vs-actuals-wrapper {
+.projection-vs-actuals-chart-wrapper {
   height: 252px;
-  min-width: 400px;
   padding: 24px;
   display: flex;
   flex-direction: column;
   gap: var(--gap-xl);
   border-radius: var(--gap-xl);
-  opacity: 0px;
   background: var(--Primary-Light, rgba(247, 249, 251, 1));
 }
 
@@ -68,18 +66,177 @@
 */
 
 .revenue-details-grid {
-  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr;
   gap: 28px;
+  width: 100%;
 }
 
 .revenue-chart-wrapper {
-  height: 320px;
   grid-column-start: 1;
   grid-column-end: 3;
   background: var(--Primary-Light, rgba(247, 249, 251, 1));
   padding: 24px;
   border-radius: var(--gap-xl);
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-md);
+}
+
+.revenue-chart-header {
+  height: 22px;
+  display: flex;
+  align-items: center;
+  gap: var(--gap-md);
+}
+
+.revenue-chart-header > h2 {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: left;
+  color: var(--black-100, rgba(28, 28, 28, 1));
+}
+
+.revenue-chart {
+  height: 100%;
+}
+
+.revenue-worldwide-wrapper {
+  background: var(--Primary-Light, rgba(247, 249, 251, 1));
+  padding: 24px;
+  border-radius: var(--gap-xl);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: var(--gap-md);
+}
+
+.revenue-worldwide-header > h2 {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: left;
+  color: var(--black-100, rgba(28, 28, 28, 1));
+}
+
+.dark .revenue-worldwide-header > h2 {
+  color: var(--black-100, rgba(255, 255, 255, 1));
+}
+
+.dark .revenue-worldwide-wrapper {
+  background: var(--Primary-Light, rgba(255, 255, 255, 0.05));
+}
+
+.revenue-worldwide-progress-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.revenue-worldwide-progress-wrapper > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.revenue-worldwide-progress-wrapper > div > p {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: left;
+}
+
+/* 
+----------------------------------------------------------------
+-----------------------SALES------------------------------------
+----------------------------------------------------------------  
+*/
+
+.default-page-salesdetails-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 28px;
+  width: 100%;
+}
+
+.default-page-sale-table-wrapper {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  border-radius: var(--gap-md);
+  background: var(--Primary-Light, rgba(247, 249, 251, 1));
+  padding: 24px;
+  border-radius: var(--gap-xl);
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-md);
+}
+
+.dark .default-page-sale-table-wrapper {
+  background: var(--Primary-Light, rgba(255, 255, 255, 0.05));
+}
+
+.default-page-sales-table-header {
+  height: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.default-page-sales-table-header > h2 {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: left;
+}
+
+.sales-table th {
+  color: var(--black-40, rgba(28, 28, 28, 0.4));
+}
+
+.dark .sales-table th {
+  color: var(--black-40, rgba(255, 255, 255, 0.4));
+}
+
+.sales-table th,
+td {
+  height: 40px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: left;
+}
+
+/* 
+----------------------------------------------------------------
+-----------------------SALES CHART------------------------------
+----------------------------------------------------------------  
+*/
+
+.default-page-sales-chart-wrapper {
+  padding: 24px;
+  border-radius: var(--gap-xl);
+  background: var(--Primary-Light, rgba(247, 249, 251, 1));
+
+  grid-column-start: 3;
+  grid-column-end: 3;
+  min-width: 250px;
+}
+
+.default-page-sales-chart-header {
+  height: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.default-page-sales-chart-header > h2 {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: left;
+  color: var(--black-100, rgba(28, 28, 28, 1));
 }
