--- a/client/src/Pages/DefaultPage/DefaultPage.css
+++ b/client/src/Pages/DefaultPage/DefaultPage.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  gap: var(--gap-xl);
+  gap: 28px;
 }
 
 .dashboard-page-header-wrapper {
@@ -20,44 +20,11 @@
   padding: var(--gap-xs) var(--gap-md);
 }
 
-.default-page-content-wrapper {
-  display: flex;
-  gap: 28px;
-  align-items: center;
-}
-
-.default-page-quick-metrics-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 28px;
-}
-
-.default-page-quick-metrics {
-  display: flex;
-  gap: 28px;
-}
-
-.projection-vs-actuals-chart-wrapper {
-  height: 252px;
-  padding: 24px;
-  display: flex;
-  flex-direction: column;
-  gap: var(--gap-xl);
-  border-radius: var(--gap-xl);
-  background: var(--Primary-Light, rgba(247, 249, 251, 1));
-}
-
-.projection-vs-actuals-header {
-  height: 20px;
-}
-
-.projection-vs-actuals-header > h2 {
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 20px;
-  text-align: left;
-  color: var(--black-100, rgba(28, 28, 28, 1));
-}
+/* 
+----------------------------------------------------------------
+-----------------------REVENUE----------------------------------
+----------------------------------------------------------------  
+*/
 
 /* 
 ----------------------------------------------------------------
@@ -65,7 +32,7 @@
 ----------------------------------------------------------------  
 */
 
-.revenue-details-grid {
+/* .revenue-details-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
@@ -84,11 +51,15 @@
   gap: var(--gap-md);
 }
 
+.dark .revenue-chart-wrapper {
+  background: var(--Primary-Light, rgba(255, 255, 255, 0.05));
+}
+
 .revenue-chart-header {
   height: 22px;
   display: flex;
   align-items: center;
-  gap: var(--gap-md);
+  gap: var(--gap-xl);
 }
 
 .revenue-chart-header > h2 {
@@ -101,19 +72,9 @@
 
 .revenue-chart {
   height: 100%;
-}
+} */
 
-.revenue-worldwide-wrapper {
-  background: var(--Primary-Light, rgba(247, 249, 251, 1));
-  padding: 24px;
-  border-radius: var(--gap-xl);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: var(--gap-md);
-}
-
-.revenue-worldwide-header > h2 {
+/* .revenue-worldwide-header > h2 {
   font-size: 14px;
   font-weight: 600;
   line-height: 20px;
@@ -149,7 +110,7 @@
   font-weight: 400;
   line-height: 18px;
   text-align: left;
-}
+} */
 
 /* 
 ----------------------------------------------------------------
@@ -157,86 +118,42 @@
 ----------------------------------------------------------------  
 */
 
-.default-page-salesdetails-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  gap: 28px;
-  width: 100%;
-}
-
-.default-page-sale-table-wrapper {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  border-radius: var(--gap-md);
-  background: var(--Primary-Light, rgba(247, 249, 251, 1));
-  padding: 24px;
-  border-radius: var(--gap-xl);
-  display: flex;
-  flex-direction: column;
-  gap: var(--gap-md);
-}
-
-.dark .default-page-sale-table-wrapper {
-  background: var(--Primary-Light, rgba(255, 255, 255, 0.05));
-}
-
-.default-page-sales-table-header {
-  height: 20px;
-  display: flex;
-  align-items: center;
-}
-
-.default-page-sales-table-header > h2 {
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 20px;
-  text-align: left;
-}
-
-.sales-table th {
-  color: var(--black-40, rgba(28, 28, 28, 0.4));
-}
-
-.dark .sales-table th {
-  color: var(--black-40, rgba(255, 255, 255, 0.4));
-}
-
-.sales-table th,
-td {
-  height: 40px;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 18px;
-  text-align: left;
-}
-
 /* 
 ----------------------------------------------------------------
 -----------------------SALES CHART------------------------------
 ----------------------------------------------------------------  
 */
 
-.default-page-sales-chart-wrapper {
+/* 
+----------------------------------------------------------------
+-----------------------CLEAN UPS------------------------------
+----------------------------------------------------------------
+*/
+
+.info-tile {
   padding: 24px;
+  gap: var(--gap-xs);
   border-radius: var(--gap-xl);
   background: var(--Primary-Light, rgba(247, 249, 251, 1));
-
-  grid-column-start: 3;
-  grid-column-end: 3;
-  min-width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-md);
 }
 
-.default-page-sales-chart-header {
+.info-header {
   height: 20px;
   display: flex;
   align-items: center;
+  gap: var(--gap-xl);
 }
 
-.default-page-sales-chart-header > h2 {
+.info-header > h2 {
   font-size: 14px;
   font-weight: 600;
   line-height: 20px;
   text-align: left;
-  color: var(--black-100, rgba(28, 28, 28, 1));
+}
+
+.dark .info-tile {
+  background: var(--Primary-Light, rgba(255, 255, 255, 0.05));
 }
