--- a/client/src/Components/Activities/Activities.css
+++ b/client/src/Components/Activities/Activities.css
@@ -6,6 +6,17 @@
   display: flex;
   align-items: start;
   gap: var(--gap-md);
+  cursor: pointer;
+}
+
+.activity-wrapper:hover,
+:focus-visible {
+  background: var(--black-5, rgba(28, 28, 28, 0.05));
+}
+
+.dark .activity-wrapper:hover,
+:focus-visible {
+  background: var(--black-5, rgba(255, 255, 255, 0.1));
 }
 
 .activity-avatar-wrapper {
