--- a/client/src/Components/MetricTile/MetricTile.css
+++ b/client/src/Components/MetricTile/MetricTile.css
@@ -38,11 +38,12 @@
 }
 
 .metric-tile-value {
-  font-family: Inter;
   font-size: 24px;
   font-weight: 600;
   line-height: 36px;
   text-align: left;
+  display: flex;
+  align-items: center;
 }
 
 .metric-tile-percentage-wrapper {
