--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,7 +46,7 @@
 
 body {
   --info-pannel-border-color: rgba(28, 28, 28, 0.1);
-  transition: background-color 0.3s, color 0.3s;
+  /* transition: background-color 0.3s, color 0.3s; */
 }
 
 [data-theme="dark"] {
@@ -100,7 +100,12 @@ button {
 }
 
 button:focus-visible {
-  outline: 1px solid rgb(43, 149, 236);
+  outline: 1px solid rgb(126, 188, 239);
+}
+
+button:disabled {
+  cursor: not-allowed;
+  background-color: inherit !important;
 }
 
 .dark .svg-icon {
